<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/msg_hint_user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/msg_hint_user_pass" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/action_login"
        app:layout_constraintEnd_toEndOf="@id/til_user_password"
        app:layout_constraintStart_toStartOf="@id/til_user_password"
        app:layout_constraintTop_toBottomOf="@id/til_user_password" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_dont_have_an_account"
        android:textColor="@color/action_blue"
        app:layout_constraintStart_toStartOf="@id/til_user_password"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_forgot_password"
        android:textColor="@color/action_blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/til_user_password"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>